Projet_GL/src/test/deca/context/invalid/unprovided/testObjet/methods/doubleParamDef.deca
// Description:
//    Déclaration d'une méthode ayant deux paramètres de même nom
//
// Resultat: Ligne 12
//    ContextualError : Double definition of parameter
//
// Historique:
//    Créé le 24/01/2018

class A{

      void get(int n, int n){
      }
}

